2025-10-13  Robby Stephenson  <robby@periapsis.org>

	* Updated iTunes source for better movie results.

2025-10-06  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with matching entries with 979 ISBN prefixes (Bug 510329).

2025-09-11  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug in image location for temporary entry (Bug 508902).
	* Fixed bug in image location for new collections (Bug 509245).
	* Fixed crashing bug for collections without a title field.

2025-09-10  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug for opening truncated files (Bug 509364).

2025-09-06  Robby Stephenson  <robby@periapsis.org>

	* Updated OpenLibrary source to fetch plot (Bug 509124).

2025-09-03  Robby Stephenson  <robby@periapsis.org>

	* Updated OpenLibrary source to fetch notes (Bug 509062).

2025-08-31  Robby Stephenson  <robby@periapsis.org>

	* Updated OpenLibrary source to update via OLID, if available (Bug 508897).

2025-08-30  Robby Stephenson  <robby@periapsis.org>

	* Added KDE shortcut keys for previous/next tab (Bug 508789).

2025-08-24  Robby Stephenson  <robby@periapsis.org>

	* Updated GCstar importer to read external collection models (Bug 508664).
	* Added option for image links to GCstar importer (Bug 508665).
	* Updated CSV importer to load images.
	* Added option for image links to CSV importer (Bug 508666).

2025-08-21  Robby Stephenson  <robby@periapsis.org>

	* Added configurable image size to OpenLibrary data source.

2025-08-19  Robby Stephenson  <robby@periapsis.org>

	* Updated OpenLibrary source to find covers for books without ISBN (Bug 507912).

2025-08-04  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 4.1.3.

2025-07-24  Robby Stephenson  <robby@periapsis.org>

	* Updated SRU fetcher to allow POST requests (Bug 507265).
	* Updated SRU fetcher to recognize alternate Dublin Core schema.

2025-06-10  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with reporting correct image location.
