@@ -1,6 +1,7 @@
 2025-10-13  Robby Stephenson  <robby@periapsis.org>
 
 	* Updated iTunes source for better movie results.
+	* Updated iTunes source to allow specifying country.
 
 2025-10-06  Robby Stephenson  <robby@periapsis.org>
 
